--- a/package.json
+++ b/package.json
@@ -24,13 +24,6 @@
 		"webpack-cli": "^3.3.2"
 	},
 	"dependencies": {
-		"@types/jest": "^24.0.13",
-		"@types/node": "^12.0.7",
-		"@types/react": "^16.8.19",
-		"@types/react-dom": "^16.8.4",
-		"cypress": "^3.3.1",
-		"react": "^16.8.6",
-		"react-dom": "^16.8.6",
-		"typescript": "^3.5.1"
+		"cypress": "^3.3.1"
 	}
 }
